// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`margins Renders \`margins\` with custom props 1`] = `
<widget-settings-group-stub
  title="Block margins"
>
  <field-slider-stub
    max="10"
    min="1"
    title="Margin - Top"
    value="1"
  />
  <field-slider-stub
    max="10"
    min="1"
    title="Margin - Right"
    value="3"
  />
  <field-slider-stub
    max="10"
    min="1"
    title="Margin - Bottom"
    value="5"
  />
  <field-slider-stub
    max="10"
    min="1"
    title="Margin - Left"
    value="7"
  />
</widget-settings-group-stub>
`;

exports[`margins Renders \`margins\` with default props 1`] = `
<widget-settings-group-stub
  title="Block margins"
>
  <field-slider-stub
    max="5"
    min="0"
    title="Margin - Top"
    value="7"
  />
  <field-slider-stub
    max="5"
    min="0"
    title="Margin - Right"
    value="5"
  />
  <field-slider-stub
    max="5"
    min="0"
    title="Margin - Bottom"
    value="3"
  />
  <field-slider-stub
    max="5"
    min="0"
    title="Margin - Left"
    value="1"
  />
</widget-settings-group-stub>
`;
